Content enhancements: featured cards, tags, category blurbs, tag legend, blog page, nav update

--- a/_config.yml
+++ b/_config.yml
@@ -36,5 +36,7 @@ nav:
     url: /hakkimizda
   - title: Projeler
     url: /projeler
+  - title: Blog
+    url: /blog
   - title: Katkıda Bulun
     url: /katki
