refactor: :recycle: enhance blog layout and post structure
* Added excerpt handling for blog posts to improve readability
* Introduced a new post layout for better content presentation
* Updated blog.md to dynamically list recent posts with excerpts

--- a/_config.yml
+++ b/_config.yml
@@ -106,3 +106,5 @@ projects:
     tags: [system-design, messaging, resiliency]
     featured: false
     order: 9
+
+excerpt_separator: "<!--more-->"
