feat(authors): :sparkles: add author layout and initial author profile
* Introduced a new layout for author pages to display author information.
* Added an author profile for QuickOrBeDead with bio and GitHub link.
* Implemented collections for authors to enhance site organization.

--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,11 @@ social:
   links:
     - https://github.com/DTVegaArchChapter
 
-# Koleksiyonlar ileride eklenebilir
-collections: {}
+# Koleksiyonlar
+collections:
+  authors:
+    output: true
+    permalink: /authors/:name/
 
 # Navigasyon (elle kullanılacak)
 nav:
