feat(authors): :sparkles: add author profiles and enhance author layout
* Added author profile for Bora Akgün with bio and avatar.
* Updated author layout to improve presentation and include author links.
* Enhanced post metadata to display author information dynamically.
* Created author file for DTVegaArchitectureChapter with relevant details.

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ plugins:
   - jekyll-feed
 
 # SEO / sosyal
-author: "DT Vega Architecture Chapter"
+author: "DTVegaArchitectureChapter"
 logo: /assets/img/logo.png
 social:
   name: DT Vega Architecture Chapter
